lord-a2k/docker-compose

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,3 +17,5 @@ jobs:
           script: |
             cd /home/ubuntu/gozar-saleor
             git pull origin main
+            docker-compose down
+            docker compose up -d
