--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,10 @@
 version: "3"
 services:
   gozar-saleor:
-    build: .
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+
     volumes:
       - .:/app
     ports:
