--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
             cd /home/ubuntu/gozar-saleor
             git pull origin main
             docker-compose down
-            docker compose up -d
+            docker-compose up -d
